update (mobile overflow-x bug).

--- a/style.css
+++ b/style.css
@@ -310,7 +310,3 @@
     text-underline-offset: 10px;
 }
 
-body{
-    overflow-x: hidden !important;
-}
-
